# powermode-indicator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  app_menu.cpp  app_menu.h  indicator.cpp  indicator.h  main.cpp  power_profile_manager.cpp  power_profile_manager.h  powermode-indicator.gresource.xml  run.fish
.github/: FUNDING.yml
.github/workflows/: release.yml
assets/icons/hicolor/: index.theme
